--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -9,7 +9,7 @@
       </ion-input>
     </ion-item>
     <ion-buttons slot="end">
-      <ion-button size="small" fill="solid" (click)="cephalixService.reloadStatusOfInstitutes()"
+      <ion-button size="small" fill="solid" (click)="cephalixService.reloadStatusOfInstitutes()" [disabled]="cephalixService.loadingStatus"
         matTooltip="{{'Reload status of institutes' | translate }}">
         <ion-icon slot="icon-only" name="reload"></ion-icon>
       </ion-button>
