--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -1,24 +1,6 @@
 <cranix-toolbar title="{{'Manage customers' | translate}}"></cranix-toolbar>
-<ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('customersFilterMD')"
-  id="customersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-<ion-content>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="business-outline" (click)="redirectToAddInstitute($event)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-toolbar>
+<ion-content  *ngIf="!authService.isMD()">
+  <ion-toolbar class="page-toolbar">
     <ion-item lines="none">
       <ion-label *ngIf="gridApi">
         #{{gridApi.getDisplayedRowCount()}}
@@ -43,10 +25,19 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-    rowSelection="multiple" [rowHeight]="authService.settings.rowHeight"
-    [rowData]="objectService.allObjects['customer']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
-    [context]="context" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+  <ag-grid-angular
+    id="agGridTable"
+    style="width: 100%; height: 100%;"
+    class="{{authService.settings.agGridThema}}"
+    rowSelection="multiple"
+    [rowHeight]="authService.settings.rowHeight"
+    [rowData]="objectService.allObjects['customer']"
+    [columnDefs]="columnDefs"
+    [context]="context"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
     (gridReady)="onGridReady($event)">
   </ag-grid-angular>
+</ion-content>
+<ion-content *ngIf="authService.isMD()">
+  <cranix-md-list objectType="customer" [context]="context"></cranix-md-list>
 </ion-content>
