--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -71,7 +71,7 @@
           </ng-template>
           <ng-template #elseBlock>
             <ion-input type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
-              [required]="objectService.required[key]"></ion-input>
+              [required]="objectService.required[key]" [pattern]="getPattern(key)"></ion-input>
           </ng-template>
         </ion-item>
         <ion-item *ngSwitchCase="'stringRO'">
