--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -31,14 +31,14 @@
         </ion-item>
         <ion-item *ngSwitchCase="'number'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock1">
             <ion-select type="number" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
               [required]="objectService.required[key]" [disabled]="key == 'role' && fixedRole">
               <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
                 {{option | translate}}</ion-select-option>
             </ion-select>
           </ng-template>
-          <ng-template #elseBlock>
+          <ng-template #elseBlock1>
             <ion-input type="number" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}">
             </ion-input>
           </ng-template>
@@ -62,14 +62,14 @@
           <ion-label position="stacked"
             *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
             {{ 'This field is required!' | translate }}</ion-label>
-          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock2">
             <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
               [required]="objectService.required[key]" [disabled]="key == 'role' && fixedRole">
               <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
                 {{option | translate}}</ion-select-option>
             </ion-select>
           </ng-template>
-          <ng-template #elseBlock>
+          <ng-template #elseBlock2>
             <ion-input type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
               [required]="objectService.required[key]" [pattern]="getPattern(key)"></ion-input>
           </ng-template>
@@ -103,14 +103,14 @@
           <ion-label position="stacked"
             *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
             {{ 'This field is required!' | translate }}</ion-label>
-          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock3">
             <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
               [required]="objectService.required[key]">
               <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
                 {{option | idToName:objectService.idToPipe(key)}}</ion-select-option>
             </ion-select>
           </ng-template>
-          <ng-template #elseBlock>
+          <ng-template #elseBlock3>
             <ion-input readonly type="text" [value]="objectService.idToName(key,object[key])"
               [required]="objectService.required[key]">
             </ion-input>
