--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -1,5 +1,6 @@
 <cranix-toolbar *ngIf="!eduS.selectedRoom" title="{{'Room control' | translate}}"></cranix-toolbar>
-<cranix-toolbar *ngIf="eduS.selectedRoom" title="{{'Room control in' | translate}} {{eduS.selectedRoom.name}}"></cranix-toolbar>
+<cranix-toolbar *ngIf="eduS.selectedRoom" title="{{'Room control in' | translate}} {{eduS.selectedRoom.name}}">
+</cranix-toolbar>
 <ion-toolbar class="page-toolbar">
   <ion-buttons *ngIf="room" slot="start">
     <ion-button matTooltip="{{ 'To login' | translate}}" (click)="setAccess('login')" [disabled]="disableChange">
@@ -43,11 +44,11 @@
         <ion-icon name="room"></ion-icon>
       </ion-button>
     </ion-item>
-    <ion-item  *ngIf="!authS.isMD()" lines="none" matTooltip="{{'Select picture size' | translate}}">
+    <ion-item *ngIf="!authS.isMD()" lines="none" matTooltip="{{'Select picture size' | translate}}">
       <ion-label>{{'Select picture size' | translate }}</ion-label>
       <ion-icon name="resize"></ion-icon>
-      <ion-select *ngIf="eduS.selectedRoom" [(ngModel)]="gridSize" name="gridSize" #roomSelect (ionChange)="sizeChange($event)"
-        okText="{{'apply' | translate }}" cancelText="{{ 'Cancel' | translate}}">
+      <ion-select *ngIf="eduS.selectedRoom" [(ngModel)]="gridSize" name="gridSize" #roomSelect
+        (ionChange)="sizeChange($event)" okText="{{'apply' | translate }}" cancelText="{{ 'Cancel' | translate}}">
         <ion-select-option value="{{size}}" *ngFor="let size of gridSizes">{{size}}</ion-select-option>
       </ion-select>
     </ion-item>
