First version with working drag and drop

--- a/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
@@ -1,29 +1,37 @@
-<ion-card no-margin>
-  <div *ngIf="device" mwlDraggable [dragData]="device">
-    <ion-card-header style="padding: 1px;">
-      <ion-toolbar style="padding: 1px;">
-        <ion-label>
-          {{device.name}} : {{ device.loggedInName }}
-        </ion-label>
-        <ion-buttons slot="end">
-          <ion-button fill="clear" (click)="openAction($event)">
-            <ion-icon name="desktop"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content class="ion-justify-content-center">
-      <form>
-        <button (click)="showScreen()">
-          <img src="{{screenShot}}" />
-        </button>
-      </form>
-      <h3>{{ 'NODEVICE' | translate}}</h3>
-    </ion-card-content>
-  </div>
-  <div *ngIf="!device" mwlDroppable (drop)="drop($event)">
-    <ion-card-content class="ion-justify-content-center">
-      <h3>{{ 'NODEVICE' | translate}}</h3>
-    </ion-card-content>
-  </div>
-</ion-card>
+<div cdkDropList [id]="id" cdkDropListOrientation="horizontal" [cdkDropListConnectedTo]="this.eduService.dropLists" (cdkDropListDropped)="drop($event)">
+  <ion-card class="example-box" no-margin [cdkDragData]="device" cdkDrag (cdkDragStarted)="stopRefresh()">
+    <img *cdkDragPreview src="/tickets/1505/2584/img1.jpeg" alt="movie.title">
+    <div class="example-handle" cdkDragHandle>
+      <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+        <path d="M0 0h24v24H0z" fill="none"></path>
+      </svg>
+    </div>
+    <div *ngIf="device">
+      <ion-card-header style="padding: 1px;">
+        <ion-toolbar style="padding: 1px;">
+          <ion-label>
+            {{device.name}} : {{ device.loggedInName }}
+          </ion-label>
+          <ion-buttons slot="end">
+            <ion-button fill="clear" (click)="openAction($event)">
+              <ion-icon name="desktop"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-card-header>
+      <ion-card-content class="ion-justify-content-center">
+        <form>
+          <button (click)="showScreen()">
+            <img src="{{screenShot}}" />
+          </button>
+        </form>
+      </ion-card-content>
+    </div>
+    <div *ngIf="!device">
+      <ion-card-content class="ion-justify-content-center">
+        <h3>{{ 'NODEVICE' | translate}}</h3>
+      </ion-card-content>
+    </div>
+  </ion-card>
+</div>
