--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -34,9 +34,16 @@
           <ion-col style="padding: 0px;">
             <ion-item lines="none">
               <ion-label position="stacked">{{'Ticket Owner'| translate}}</ion-label>
-              <ionic-selectable #selectTicketOwner item-content [(ngModel)]="ticketOwner"
-                [ngModelOptions]="{standalone: true}" [items]="ticketWorkers" itemValueField="id" itemTextField="label"
-                [canSearch]="true" (onChange)="setOwner()">
+              <ionic-selectable
+                #selectTicketOwner
+                item-content
+                [(ngModel)]="ticketOwner"
+                [ngModelOptions]="{standalone: true}"
+                [items]="ticketWorkers"
+                itemValueField="id"
+                itemTextField="label"
+                [canSearch]="true"
+                (onChange)="setOwner()">
                 <ng-template ionicSelectableHeaderTemplate>
                   <ion-toolbar>
                     <ion-title>
