--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -40,14 +40,32 @@
   <ion-buttons slot="end">
     <ion-item lines="none" matTooltip="{{'Select the room to control' | translate}}">
       <ion-label *ngIf="!authS.isMD()">{{'Select a room' | translate}}</ion-label>
-      <ion-button (click)="selectRooms()" fill="clear">
+      <ionic-selectable #selectRoom item-content [(ngModel)]="eduS.selectedRoom" [ngModelOptions]="{standalone: true}"
+      [items]="eduS.myRooms" itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="roomSelected()">
+      <ng-template ionicSelectableHeaderTemplate>
+        <ion-toolbar>
+          <ion-title>
+            {{ "Select a Room" | translate }}
+          </ion-title>
+          <ion-buttons slot="end">
+            <ion-button ion-button (click)="selectRoom.close()">
+              <ion-icon color="danger" name="close"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ng-template>
+      <ng-template ionicSelectableItemIconTemplate>
+        <div></div>
+      </ng-template>
+    </ionic-selectable>
+      <!-- ion-button (click)="selectRooms()" fill="clear">
         <ion-icon name="room"></ion-icon>
-      </ion-button>
+      </ion-button -->
     </ion-item>
     <ion-item *ngIf="!authS.isMD()" lines="none" matTooltip="{{'Select picture size' | translate}}">
       <ion-label>{{'Select picture size' | translate }}</ion-label>
       <ion-icon name="resize"></ion-icon>
-      <ion-select *ngIf="eduS.selectedRoom" [(ngModel)]="gridSize" name="gridSize" #roomSelect
+      <ion-select *ngIf="eduS.selectedRoom" [(ngModel)]="gridSize" name="gridSize"
         (ionChange)="sizeChange($event)" okText="{{'apply' | translate }}" cancelText="{{ 'Cancel' | translate}}">
         <ion-select-option value="{{size}}" *ngFor="let size of gridSizes">{{size}}</ion-select-option>
       </ion-select>
@@ -56,19 +74,11 @@
 </ion-toolbar>
 <ion-item-divider></ion-item-divider>
 <ion-content>
-  <ion-grid *ngIf="room" cdkDropListGroup>
-    <ion-row id="row-{{i}}" cdkDropList cdkDropListOrientation="horizontal" class="example-list"
-      *ngFor="let row of rows; index as i" (cdkDropListDropped)="drop($event)">
-      <ion-col *ngFor="let device of row; index as j">
+  <ion-grid *ngIf="eduS.room" cdkDropListGroup>
+    <ion-row id="row-{{i}}" *ngFor="let row of eduS.rows; index as i">
+      <ion-col *ngFor="let device of row; index as j" [size]="gridSize">
         <cranix-roomdev [row]="i" [place]="j" [device]="device"></cranix-roomdev>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <!-- ion-grid *ngIf="room" fiexd="true">
-    <ion-row class="grid-row" *ngFor="let row of array(room.rows); index as r">
-      <ion-col *ngFor="let dev of array(room.places); index as p" size="{{gridSize}}">
-        <cranix-roomdev [row]="r+1" [place]="p+1" [device]="getDevice(r+1,p+1)" [index]="dev"></cranix-roomdev>
-      </ion-col>
-    </ion-row>
-  </ion-grid-->
 </ion-content>
