--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -1,7 +1,11 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="challenges">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>{{ 'Challenges' | translate }}</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="roomcontrol">
-      <ion-icon name="calendar"></ion-icon>
+      <ion-icon name="room"></ion-icon>
       <ion-label>{{ 'Room' | translate }}</ion-label>
     </ion-tab-button>
     <ion-tab-button *ngIf="authS.isAllowed('education.proxy')" tab="mypositive">
